# molll

./: .gitignore  CITATION.bib  README.md  pyproject.toml
molll/: __init__.py  molll.py  propll.py
molll/precomputed/: __init__.py  libinventLL.py
molll/precomputed/data/: AtomLL_libinvent_radius_1.json  MolLL_libinvent_radius_1.json
